--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
         <p class="lead">Использование приложения позволяет Вашим клиентам получить более качественные сервис от интернет-магазина. А вам иметь расширенную информацию для работы с клиентом. Так же мы уже можем автоматизировать работу с заказом. Например, у нас есть "Отмена заказа" при неоплате в течении определенного времени.</p>
       </div>
       <div class="col-lg-4 mr-auto">
-        <p class="lead">Наше приложение развивается и мы его дополняем разными отчетами, что позволяет вам находить новые мотивация для ваших клиентов для совершения покупок. Так же мы готовы реализовать ваш сценарий работы с клиентом</p>
+        <p class="lead">Наше приложение развивается и мы его дополняем разными отчетами, что позволяет вам находить новые мотивация вашим клиентам для совершения покупок. Так же мы готовы реализовать ваш сценарий работы с клиентом. Ещё у нас есть импорт клиентов в инсалес из файла</p>
       </div>
     </div>
     <%# <div class="text-center"><a class="btn btn-primary btn-lg" href="http://demo-themes.myinsales.ru/" target="_blank">Демо магазин</a></div> %>
