--- a/app/assets/stylesheets/logo.scss
+++ b/app/assets/stylesheets/logo.scss
@@ -1,6 +1,6 @@
 
 .logo_white {
-  max-height: 70px;
+  max-width: 220px;
 }
 @media (max-width: 1090px) {
   .navbar-brand {
@@ -12,7 +12,5 @@
     //width: 70%;
   }
   .logo_white {
-    //width: 250px;
-    max-height: 70px;
   }
 }
