--- a/app/views/dashboard/services.html.erb
+++ b/app/views/dashboard/services.html.erb
@@ -1,57 +1,127 @@
-<div class="row mt-3">
-  <div class="col-12">
-      <div class="h2">Наши сервисы</div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Название</th>
-            <th>Описание</th>
-            <th>Состояние</th>
-            <th>Настройка</th>
-            <th>Тариф</th>
-            <th>Действует</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr classs="favorite_setup">
-            <td><%= FavoriteSetup::TITLE %></td>
-            <td><%= FavoriteSetup::DESCRIPTION %></td>
-            <td>
-              <%= link_to 'Добавить', new_favorite_setup_path, class: 'btn btn-dark' if !@favorite_setup %>
-              <%= link_to 'Добавлен', edit_favorite_setup_path(@favorite_setup.id), class: 'btn btn-outline-dark disabled', disabled: true if @favorite_setup %>
-            </td>
-            <td>
-              <%= link_to 'Настроить', edit_favorite_setup_path(@favorite_setup.id), class: 'btn btn-dark' if @favorite_setup && !@favorite_setup.status %>
-              <%= link_to 'Настроено', edit_favorite_setup_path(@favorite_setup.id), class: 'btn btn-outline-dark' if @favorite_setup && @favorite_setup.status %>
-            </td>
-            <td>
-              <%= @favorite_setup.payplan.title if @favorite_setup && @favorite_setup.payplan %></br>
-              <%= @favorite_setup.status ? "Состояние: Вкл" : "Состояние: Выкл" if @favorite_setup %>
-            </td>
-            <td><%= @favorite_setup.present? && @favorite_setup.valid_until.present? ? @favorite_setup.valid_until.strftime("%d/%m/%Y") : "бесплатно" %></td>
-            <td><%# link_to '<span class="oi oi-trash"></span>'.html_safe, @favorite_setup, method: :delete, data: { confirm: 'Are you sure?' } if @favorite_setup %></td>
-          </tr>
 
-          <tr classs="message_setup">
-            <td><%= MessageSetup::TITLE %></td>
-            <td><%= MessageSetup::DESCRIPTION %></td>
-            <td>
-              <%= link_to 'Добавить', new_message_setup_path, class: 'btn btn-dark' if !@message_setup %>
-              <%= link_to 'Добавлен', edit_message_setup_path(@message_setup.id), class: 'btn btn-outline-dark disabled', disabled: true if @message_setup %>
-            </td>
-            <td>
-              <%= link_to 'Настроить', edit_message_setup_path(@message_setup.id), class: 'btn btn-dark' if @message_setup && !@message_setup.status %>
-              <%= link_to 'Настроено', edit_message_setup_path(@message_setup.id), class: 'btn btn-outline-dark' if @message_setup && @message_setup.status %>
-            </td>
-            <td>
-              <%= @message_setup.payplan.title if @message_setup && @message_setup.payplan %></br>
-              <%= @message_setup.status ? "Состояние: Вкл" : "Состояние: Выкл" if @message_setup %>
-            </td>
-            <td><%= current_user.message_setup_valid_until.present? ? current_user.message_setup_valid_until.strftime("%d/%m/%Y") : "бесплатно" %></td>
-            <td><%# link_to '<span class="oi oi-trash"></span>'.html_safe, @message_setup, method: :delete, data: { confirm: 'Are you sure?' } if @message_setup %></td>
-          </tr>
-        </tbody>
-      </table>
+<div class="row my-4 row-gap-4">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <div class="h4 card-title">Избранное <small>(favorite)</small></div>
+      </div>
+      <div class="card-body">
+        <div class="card-text">
+          <ul>
+            <li>Добавление и удаление товаров в/из избранного на любом устройстве для зарегистрированных клиентов магазина</li>
+            <li>экспорт клиентом списка на почту</li>
+            <li>триггеры</li>
+            <li>Скачать виджет или обратиться в поддержку для настройки</li>
+          </ul>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="f-flex flex-between">
+          <label>Состояние:</label>
+          <span>вкл/выкл</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <div class="h4 card-title">Брошенная корзина <small>(abandoned-cart)</small></div>
+      </div>
+      <div class="card-body">
+        <div class="card-text">
+          <ul>
+            <li>Работает на странице оформления заказа и собирает информацию из каждого заполненого поля</li>
+            <li>триггеры</li>         
+            <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_abandoned_cart.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
+          </ul>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="f-flex flex-between">
+          <label>Состояние:</label>
+          <span>вкл/выкл</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <div class="h4 card-title">Предзаказ <small>(preorder)</small></div>
+      </div>
+      <div class="card-body">
+        <div class="card-text">
+          <ul>
+            <li>Форма заявки на сайте для регистрации запроса на предзаказ товара</li>
+            <li>в инсалес должен быть создан кастомный статус в группе Новый ('new') с названием - 'preorder'</li>
+            <li>перед созданием заказа со статусом Предзаказ проверяется кол-во у товара и если кол-во равно 0 то добавляется кол-во 1 и только тогда можно создать заказ</li>    
+            <li>триггеры</li>
+            <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_preorder.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
+          </ul>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="f-flex flex-between">
+          <label>Состояние:</label>
+          <span>вкл/выкл</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <div class="h4 card-title">Сообщить о поступлении <small>(restock)</small></div>
+      </div>
+      <div class="card-body">
+        <div class="card-text">  
+          <ul>
+            <li>
+              <span>Ссылка на файл с товарами <small>(проверьте чтобы в настройке выгрузки стояла галка  - все варианты)</small></span>
+              <%= link_to 'create xml by api', api_create_restock_xml_message_setups_path, class: "btn btn-outline-primary btn-sm float-end", data: {turbo_method: :post } if MessageSetup.count < 1 %>
+              <%= link_to add_icon, new_message_setup_path, class: "btn btn-outline-primary btn-sm float-end", data: {turbo_frame: dom_id(MessageSetup.new) } if MessageSetup.count < 1 %>
+            </li>
+            <%= turbo_frame_tag MessageSetup.new %>
+            <%= turbo_stream_from "message_setups" %>
+            <%= turbo_frame_tag 'message_setups', data: { } do %>
+              <% MessageSetup.all.each do |message_setup|%>
+                <%= render partial: "message_setups/message_setup", locals: {message_setup: message_setup} %>
+              <% end %>
+            <% end %>
+            <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_restock.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
+          </ul>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="f-flex flex-between">
+          <label>Состояние:</label>
+          <span>вкл/выкл</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-header">
+        <div class="h4 card-title">Заказы <small>(order)</small></div>
+      </div>
+      <div class="card-body">
+        <div class="card-text">
+          <ul>
+            <li>уведомление клиентов и менеджеров магазина при смене статусов заказов с помощью InsalesApi, SMS, Email сообщений</li>
+            <li>триггеры</li>
+            <li>скачать виджет или обратиться в поддержку для настройки</li>
+          </ul>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="f-flex flex-between">
+          <label>Состояние:</label>
+          <span>вкл/выкл</span>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
