--- a/app/views/layouts/_user_navigation.html.erb
+++ b/app/views/layouts/_user_navigation.html.erb
@@ -1,27 +1,27 @@
 <li class="nav-item <%= 'active' if current_page?(mycases_path) %>">
-  <a class="nav-link" href="<%= mycases_path %>">Заявки</a>
+  <a class="nav-link text-white " href="<%= mycases_path %>">Заявки</a>
 </li>
 <li class="nav-item <%= 'active' if current_page?(clients_path) %>">
-  <a class="nav-link" href="<%= clients_path %>">Клиенты</a>
+  <a class="nav-link text-white " href="<%= clients_path %>">Клиенты</a>
 </li>
 <li class="nav-item <%= 'active' if current_page?(products_path) %>">
-  <a class="nav-link" href="<%= products_path %>">Товары</a>
+  <a class="nav-link text-white " href="<%= products_path %>">Товары</a>
 </li>
 <li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">Триггеры</a>
+  <a class="nav-link text-white  dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">Триггеры</a>
   <div class="dropdown-menu">
     <a class="dropdown-item <%= 'active' if current_page?(events_path) %>" href="<%= events_path %>">События</a>
     <a class="dropdown-item <%= 'active' if current_page?(templates_path) %>" href="<%= templates_path %>">Шаблоны</a>
   </div>
 </li>
 <li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">Настройки</a>
+  <a class="nav-link text-white  dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">Настройки</a>
   <div class="dropdown-menu">
-    <a class="dropdown-item <%= 'active' if current_page?(edit_user_path( current_user )) %>" href="<%= edit_user_path( current_user ) %>">Аккаунт</a>
-    <a class="dropdown-item <%= 'active' if current_page?(email_setups_path) %>" href="<%= email_setups_path %>">Почта</a>
-    <a class="dropdown-item <%= 'active' if current_page?(dashboard_services_path) %>" href="<%= dashboard_services_path %>">Сервисы</a>
-    <a class="dropdown-item <%= 'active' if current_page?(invoices_path) %>" href="<%= invoices_path %>">Счета</a>
-    <a class="dropdown-item <%= 'active' if current_page?(insints_path) %>" href="<%= insints_path %>">Интеграция insales</a>
+    <%= link_to 'Аккаунт', dashboard_path, class: current_page?(dashboard_path) ? 'dropdown-item active' : 'dropdown-item' %>
+    <%= link_to 'Почта', email_setups_path, class: current_page?(email_setups_path) ? 'dropdown-item active' : 'dropdown-item' %>
+    <%= link_to 'Сервисы', dashboard_services_path, class: current_page?(dashboard_services_path) ? 'dropdown-item active' : 'dropdown-item' %>
+    <%= link_to 'Счета', invoices_path, class: current_page?(invoices_path) ? 'dropdown-item active' : 'dropdown-item' %>
+    <%= link_to 'Интеграция insales', insints_path, class: current_page?(insints_path) ? 'dropdown-item active' : 'dropdown-item' %>
   </div>
 </li>
 
