--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,19 +21,16 @@
         <th rowspan="2">#</th>
         <th rowspan="2"></th>
         <th rowspan="2">Пользователь</th>
-        <th rowspan="2">Даты</th>
         <th rowspan="2">Настройки</th>
         <th colspan="4">Всего</th>
-        <th colspan="3">Сервисы состояние</th>
-        <th colspan="1" rowspan="2"></th>
+        <th rowspan="2">Состояние</th>
       </tr>
       <tr class="bg-success mt-0">
         <th>Clients</th>
         <th>Products</th>
         <%=tag.th '<i class="bi bi-heart"></i>'.html_safe, title: 'Favorites' %>
         <%=tag.th '<i class="bi bi-arrow-repeat"></i>'.html_safe, title: 'Restock' %>
-        <th>Избранное</th>
-        <th colspan="2">Триггеры</th>
+        <th>Триггеры</th>
       </tr>
     </thead>
     <tbody class="align-middle">
