change add message setup create after user create

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,13 +24,13 @@
         <th rowspan="2">Настройки</th>
         <th colspan="4">Всего</th>
         <th rowspan="2">Состояние</th>
+        <th rowspan="2"></th>
       </tr>
       <tr class="bg-success mt-0">
         <th>Clients</th>
         <th>Products</th>
         <%=tag.th '<i class="bi bi-heart"></i>'.html_safe, title: 'Favorites' %>
         <%=tag.th '<i class="bi bi-arrow-repeat"></i>'.html_safe, title: 'Restock' %>
-        <th>Триггеры</th>
       </tr>
     </thead>
     <tbody class="align-middle">
