--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -9,8 +9,8 @@
 <meta name="description" content="MyAppDA - это сервис маркетинга для интернет-магазина (email, соц сети, мессенджеры, формы, статистика, аналитика). Избранные товары, Собщить о поступлении, Триггеры, маркетинг, рассылки"/>
 <%= favicon_link_tag asset_path("myappda_icon.png") %>
 
-<%# stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-<%= stylesheet_link_tag "application", "data-turbo-track": Rails.env.production? ? "reload" : "" %>
+<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+<%# stylesheet_link_tag "application", "data-turbo-track": Rails.env.production? ? "reload" : "" %>
 <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
 <meta name="turbo-prefetch" content="false">
 
