--- a/app/views/insints/_form.html.erb
+++ b/app/views/insints/_form.html.erb
@@ -32,13 +32,9 @@
   </div>
 </div>
   <div class="row">
-  <div class="col-2 btn-group mt-5">
-    <%= f.button :submit, 'Сохранить', class: 'btn btn-success'  %>
-    <% if current_admin %>
-    <%= link_to 'Назад', adminindex_insints_path, class: 'btn btn-outline-primary'  %>
-      <% else %>
-    <%= link_to 'Назад', dashboard_path, class: 'btn btn-outline-primary'  %>
-    <% end %>
-  </div>
+    <div class="col-2 btn-group mt-5">
+      <%= f.button :submit, t('save'), class: 'btn btn-success'  %>
+      <%= link_to 'Назад', current_admin ? adminindex_insints_path : dashboard_path, class: 'btn btn-outline-secondary'  %>
     </div>
+  </div>
 <% end %>
