--- a/app/views/useraccounts/_useraccount.html.erb
+++ b/app/views/useraccounts/_useraccount.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag useraccount, class: "d-flex list-group-item py-2 border-start-0 border-end-0 row", data: {}  do %>
+<%= turbo_frame_tag dom_id(current_user, dom_id(useraccount)), class: "d-flex list-group-item py-2 border-start-0 border-end-0 row", data: {}  do %>
     <%= tag.div(useraccount.name, class: "col-3") %>
     <%= tag.div(useraccount.email, class: "col-2") %>
     <%= tag.div(useraccount.shop, class: "col-2") %>
